--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -29,3 +29,28 @@ input{
 	float :left;
 	width:30%;
 }
+
+
+#client {
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 70%;
+  margin-top:5%;
+}
+
+#client td, #client th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+#client tr:nth-child(even){background-color: #f2f2f2;}
+
+#client tr:hover {background-color: #ddd;}
+
+#client th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #4CAF50;
+  color: white;
+}
